--- a/package.json
+++ b/package.json
@@ -14,6 +14,12 @@
     "next": "14.2.35"
   },
   "devDependencies": {
+    "@emotion/cache": "^11.13.1",
+    "@emotion/react": "^11.13.3",
+    "@emotion/styled": "^11.13.0",
+    "@mui/icons-material": "^6.1.3",
+    "@mui/material": "^6.1.3",
+    "@mui/material-nextjs": "^6.1.3",
     "typescript": "^5",
     "@types/node": "^20",
     "@types/react": "^18",
