--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "next": "14.2.35",
     "react": "^18",
     "react-dom": "^18",
+    "sweetalert2": "^11.26.17",
     "uuid": "^13.0.0"
   },
   "devDependencies": {
