--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "next": "14.2.35",
     "react": "^18",
+    "react-csv": "^2.2.2",
     "react-dom": "^18",
     "sweetalert2": "^11.26.17",
     "uuid": "^13.0.0"
@@ -27,6 +28,7 @@
     "@types/react-dom": "^18",
     "eslint": "^8",
     "eslint-config-next": "14.2.35",
-    "typescript": "^5"
+    "typescript": "^5",
+    "@types/react-csv": "^1.1.10"
   }
 }
