--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "next": "14.2.35",
+    "next-pwa": "^5.6.0",
     "react": "^18",
     "react-csv": "^2.2.2",
     "react-dom": "^18",
@@ -25,10 +26,10 @@
     "@mui/material-nextjs": "^6.1.3",
     "@types/node": "^20",
     "@types/react": "^18",
+    "@types/react-csv": "^1.1.10",
     "@types/react-dom": "^18",
     "eslint": "^8",
     "eslint-config-next": "14.2.35",
-    "typescript": "^5",
-    "@types/react-csv": "^1.1.10"
+    "typescript": "^5"
   }
 }
