--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "chart.js": "^4.5.1",
     "next": "14.2.35",
     "react": "^18",
+    "react-chartjs-2": "^5.3.1",
     "react-csv": "^2.2.2",
     "react-dom": "^18",
     "sweetalert2": "^11.26.17",
@@ -25,10 +27,10 @@
     "@mui/material-nextjs": "^6.1.3",
     "@types/node": "^20",
     "@types/react": "^18",
+    "@types/react-csv": "^1.1.10",
     "@types/react-dom": "^18",
     "eslint": "^8",
     "eslint-config-next": "14.2.35",
-    "typescript": "^5",
-    "@types/react-csv": "^1.1.10"
+    "typescript": "^5"
   }
 }
