--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "chart.js": "^4.5.1",
+    "mui-color-input": "^6.0.0",
     "next": "14.2.35",
     "react": "^18",
     "react-chartjs-2": "^5.3.1",
